--- a/final.html
+++ b/final.html
@@ -28,7 +28,8 @@
                 &nbsp;
             </div>
             <div class="twelve columns offset-by-one content">
-                <p>my writing and music i like - (13!D3R</p>
+            <h5>none</h5>
+            <br>
             </div>
         </div>
     </div>
