--- a/rough.html
+++ b/rough.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>feed fish</title>
+    <title>Fish Fourteen</title>
     <meta name="author" content="~">
     <meta name="description" content="">
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="feed fish" />
+    <meta property="og:title" content="feed like fishes" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -18,7 +18,7 @@
     <div class="container">
             <div class="three columns sidebar">
                 <nav>
-                    <h4 id="logo"><a href="/">dead birds cant fly</a></h4>
+                    <h4 id="logo"><a href="/">deadbirdscantfly</a></h4>
                     <ul>
                         <li><a href="/final">final</a></li>
                         <li><a href="/rough">rough</a></li>
@@ -30,7 +30,7 @@
             <div class="twelve columns offset-by-one content">
             <h3>short stories</h3>
             <br>
-            <img src="img/bird.jpg" width=150 height= 100>
+            <img class="book-image" src="img/bird.jpg">
             <h5>I can't fly anymore but who cares</h5>
             <br>
             <p>
