--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <nav>
                     <h4 id="logo"><a href="/">deadbirdscantfly</a></h4>
                     <ul>
-                        <li><a href="/writing/final">final</a></li>
-                        <li><a href="/writing/rough">rough</a></li>
-                        <li><a href="/writing/music">music</a></li>
+                        <li><a href="/final">final</a></li>
+                        <li><a href="/rough">rough</a></li>
+                        <li><a href="/music">music</a></li>
                     </ul>
                 </nav>
                 &nbsp;
