--- a/allrough/bird.html
+++ b/allrough/bird.html
@@ -9,9 +9,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/skeleton.css">
+    <link rel="stylesheet" href="../css/custom.css">
 </head>
 <body>
 
@@ -30,7 +30,7 @@
             <div class="twelve columns offset-by-one content">
             <h3>short stories</h3>
             <br>
-            <img class="book-image" src="img/bird.jpg">
+            <img class="book-image" src="../img/bird.jpg">
             <h5>I can't fly anymore but who cares</h5>
             <br>
             <p>
