--- a/roughcontainer.html
+++ b/roughcontainer.html
@@ -16,6 +16,7 @@
 <body>
 
     <div class="container">
+            
             <div class="three columns sidebar">
                 <nav>
                     <h4 id="logo"><a href="/">deadbirdscantfly</a></h4>
@@ -27,8 +28,9 @@
                 </nav>
                 &nbsp;
             </div>
+
             <div class="twelve columns offset-by-one content">
-                <p>my writing and music i like - cleider</p>
+                <p>1.<a href="/allrough/bird">bird</a></p>
             </div>
         </div>
     </div>
