--- a/music.html
+++ b/music.html
@@ -22,7 +22,7 @@
                     <h4 id="logo"><a href="/">deadbirdscantfly</a></h4>
                     <ul>
                         <li><a href="/final">final</a></li>
-                        <li><a href="/rough">rough</a></li>
+                        <li><a href="/roughcontainer">rough</a></li>
                         <li><a href="/music">music</a></li>
                     </ul>
                 </nav>
@@ -33,7 +33,7 @@
                 <a href="https://www.last.fm/user/dumbphone">https://www.last.fm/user/dumbphone</a><br>
                 <a href="https://rateyourmusic.com/~oldpeoplecrying">https://rateyourmusic.com/~oldpeoplecrying</a>
                 <br>
-                <a href="https://rateyourmusic.com/~oldpeoplecrying"><img border=0 src="https://rateyourmusic.com/images/musicmap/oldpeoplecrying.png" width=420 height=200></a>
+                <a href="https://rateyourmusic.com/~oldpeoplecrying"><img border=0 src="https://rateyourmusic.com/images/musicmap/oldpeoplecrying.png" width=320 height=160></a>
                 <br>
                 <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fgoodwriting&color=white_orange&size=24" style="width: 24px; height: 24px;"></iframe>
                 <iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:klayderr&size=basic&theme=light" width="140" height="27" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
