--- a/final.html
+++ b/final.html
@@ -21,7 +21,7 @@
                     <h4 id="logo"><a href="/">deadbirdscantfly</a></h4>
                     <ul>
                         <li><a href="/final">final</a></li>
-                        <li><a href="/rough">rough</a></li>
+                        <li><a href="/roughcontainer">rough</a></li>
                         <li><a href="/music">music</a></li>
                     </ul>
                 </nav>
