--- a/music.html
+++ b/music.html
@@ -29,14 +29,12 @@
                 &nbsp;
             </div>
             <div class="twelve columns offset-by-one content">
-
+                <a href="https://open.spotify.com/user/klayderr">https://open.spotify.com/user/klayderr</a><br>
                 <a href="https://www.last.fm/user/dumbphone">https://www.last.fm/user/dumbphone</a><br>
+                <a href="https://soundcloud.com/goodwriting"> https://soundcloud.com/goodwriting</a><br>
                 <a href="https://rateyourmusic.com/~oldpeoplecrying">https://rateyourmusic.com/~oldpeoplecrying</a>
-                <br>
+                <br><br>
                 <a href="https://rateyourmusic.com/~oldpeoplecrying"><img border=0 src="https://rateyourmusic.com/images/musicmap/oldpeoplecrying.png" width=320 height=160></a>
-                <br>
-                <iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fgoodwriting&color=white_orange&size=24" style="width: 24px; height: 24px;"></iframe>
-                <iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:klayderr&size=basic&theme=light" width="140" height="27" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
             </div>
         </div>
     </div>
