--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css">
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+    <script type='text/javascript' src='config.js'></script>
+
+    <script src="js/info.js"></script>
+    
 </head>
 <body>
-
     <div class="container">
             <div class="three columns sidebar">
                 <nav>
@@ -28,7 +34,11 @@
                 &nbsp;
             </div>
             <div class="twelve columns offset-by-one content">
-                <p>my writing and music i like - cleider</p>
+
+                currently listening to: <p id="indexmusic"></p>
+                <a class="twitter-timeline" 
+                href="https://twitter.com/oldpeoplecrying"
+                data-chrome="nofooter noheader noborders noscrollbar transparent">Tweets by @oldpeoplecrying</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
     </div>
