--- a/writing.html
+++ b/writing.html
@@ -18,18 +18,18 @@
     <div class="container">
             <div class="three columns sidebar">
                 <nav>
-                    <h4 id="logo"><a href="/">deadbirdscantfly</a></h4>
+                    <h4 id="logo"><a href="/">&</a></h4>
                     <ul>
-                        <li><a href="/final">final</a></li>
-                        <li><a href="/roughcontainer">rough</a></li>
                         <li><a href="/music">music</a></li>
+                        <li><a href="/writing">writing</a></li>
+                        <li><a href="/keacleider">kea&cleider</a></li>
                     </ul>
                 </nav>
                 &nbsp;
             </div>
-            <div class="twelve columns offset-by-one content">
-            <h5>none</h5>
-            <br>
+
+            <div class="twelve columns offset-by-one content writingfolder">
+                <p>1.<a href="/writing/bird">bird</a></p>
             </div>
         </div>
     </div>
