--- a/music.html
+++ b/music.html
@@ -12,23 +12,29 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type='text/javascript' src='config.js'></script>
+    <script src="js/info.js"></script>
 </head>
 
 <body>
-
     <div class="container">
             <div class="three columns sidebar">
                 <nav>
-                    <h4 id="logo"><a href="/">deadbirdscantfly</a></h4>
+                    <h4 id="logo"><a href="/">&</a></h4>
                     <ul>
-                        <li><a href="/final">final</a></li>
-                        <li><a href="/roughcontainer">rough</a></li>
                         <li><a href="/music">music</a></li>
+                        <li><a href="/writing">writing</a></li>
+                        <li><a href="/keacleider">kea&cleider</a></li>
                     </ul>
                 </nav>
                 &nbsp;
             </div>
             <div class="twelve columns offset-by-one content">
+
+                currently listening to: <p id="indexmusic"></p>
+
                 <a href="https://open.spotify.com/user/klayderr">https://open.spotify.com/user/klayderr</a><br>
                 <a href="https://www.last.fm/user/dumbphone">https://www.last.fm/user/dumbphone</a><br>
                 <a href="https://soundcloud.com/goodwriting"> https://soundcloud.com/goodwriting</a><br>
