--- a/music.html
+++ b/music.html
@@ -15,26 +15,34 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type='text/javascript' src='config.js'></script>
-    <script src="js/info.js"></script>
+
 </head>
 
 <body>
     <div class="container">
-            <div class="three columns sidebar">
-                <nav>
-                    <h4 id="logo"><a href="/">&</a></h4>
-                    <ul>
-                        <li><a href="/music">music</a></li>
-                        <li><a href="/writing">writing</a></li>
-                        <li><a href="/keacleider">kea&cleider</a></li>
-                    </ul>
-                </nav>
-                &nbsp;
+        <div class="three columns sidebar">
+            <nav>
+                <h4 id="logo"><a href="/">&</a></h4>
+                <ul>
+                    <li><a href="/music">music</a></li>
+                    <li><a href="/writing">writing</a></li>
+                    <li><a href="/keacleider">kea&cleider</a></li>
+                </ul>
+            </nav>
+            &nbsp;
+        </div>
+
+        <div class="twelve columns offset-by-one content">
+            <div class="musiclist">
+                <button id="last15">last 15 songs</button>
+                <button id="sevendays">top artists (7 days)</button>
+                <button id="songsilove">songs i love</button>
+                
+                <table id="t1">                
+                </table>
+
             </div>
-            <div class="twelve columns offset-by-one content">
-
-                currently listening to: <p id="indexmusic"></p>
-
+            <br>
                 <a href="https://open.spotify.com/user/klayderr">https://open.spotify.com/user/klayderr</a><br>
                 <a href="https://www.last.fm/user/dumbphone">https://www.last.fm/user/dumbphone</a><br>
                 <a href="https://soundcloud.com/goodwriting"> https://soundcloud.com/goodwriting</a><br>
@@ -42,6 +50,8 @@
                 <br><br>
                 <a href="https://rateyourmusic.com/~oldpeoplecrying"><img border=0 src="https://rateyourmusic.com/images/musicmap/oldpeoplecrying.png" width=320 height=160></a>
             </div>
+
         </div>
     </div>
+<script src="js/info.js"></script>
 </body>
