--- a/music.html
+++ b/music.html
@@ -22,36 +22,20 @@
     <div class="container">
         <div class="three columns sidebar">
             <nav>
-                <h4 id="logo"><a href="/">&</a></h4>
+                <h4 id="logo"><a href="/">twt</a></h4>
                 <ul>
                     <li><a href="/music">music</a></li>
-                    <li><a href="/writing">writing</a></li>
-                    <li><a href="/keacleider">kea&cleider</a></li>
                 </ul>
             </nav>
             &nbsp;
         </div>
-
         <div class="twelve columns offset-by-one content">
-            <div class="musiclist">
-                <button id="last15">last 15 songs</button>
-                <button id="sevendays">top artists (7 days)</button>
-                <button id="songsilove">songs i love</button>
-                
-                <table id="t1">                
-                </table>
-
-            </div>
-            <br>
                 <a href="https://open.spotify.com/user/klayderr">https://open.spotify.com/user/klayderr</a><br>
                 <a href="https://www.last.fm/user/dumbphone">https://www.last.fm/user/dumbphone</a><br>
                 <a href="https://soundcloud.com/goodwriting"> https://soundcloud.com/goodwriting</a><br>
                 <a href="https://rateyourmusic.com/~oldpeoplecrying">https://rateyourmusic.com/~oldpeoplecrying</a>
-                <br><br>
-                <a href="https://rateyourmusic.com/~oldpeoplecrying"><img border=0 src="https://rateyourmusic.com/images/musicmap/oldpeoplecrying.png" width=320 height=160></a>
+                <a href="https://twitter.com/oldpeoplecry">https://twitter.com/oldpeoplecry</a>
             </div>
-
         </div>
     </div>
-<script src="js/info.js"></script>
 </body>
