--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
             <div class="three columns sidebar">
                 <nav>
-                    <h4 id="logo"><a href="/">&</a></h4>
+                    <h4 id="logo"><a href="/">twt</a></h4>
                     <ul>
                         <li><a href="/music">music</a></li>
                         <li><a href="/writing">writing</a></li>
@@ -29,8 +29,8 @@
             </div>
             <div class="twelve columns offset-by-one content">
                 <a class="twitter-timeline" 
-                href="https://twitter.com/oldpeoplecrying"
-                data-chrome="nofooter noheader noborders noscrollbar transparent">Tweets by @oldpeoplecrying</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                href="https://twitter.com/oldpeoplecry"
+                data-chrome="nofooter noheader noborders noscrollbar transparent">Tweets by @oldpeoplecry</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
     </div>
