--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>Fish Fourteen</title>
+    <title>~</title>
     <meta name="author" content="~">
     <meta name="description" content="">
     <meta property="og:type" content="article" />
@@ -21,8 +21,6 @@
                     <h4 id="logo"><a href="/">twt</a></h4>
                     <ul>
                         <li><a href="/music">music</a></li>
-                        <li><a href="/writing">writing</a></li>
-                        <li><a href="/keacleider">kea&cleider</a></li>
                     </ul>
                 </nav>
                 &nbsp;
