--- a/music.html
+++ b/music.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>Fish Fourteen</title>
+    <title>~</title>
     <meta name="author" content="~">
     <meta name="description" content="">
     <meta property="og:type" content="article" />
@@ -12,10 +12,6 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css">
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script type='text/javascript' src='config.js'></script>
-
 </head>
 
 <body>
