--- a/music.html
+++ b/music.html
@@ -28,8 +28,7 @@
         <div class="twelve columns offset-by-one content">
                 <a href="https://open.spotify.com/user/klayderr">https://open.spotify.com/user/klayderr</a><br>
                 <a href="https://www.last.fm/user/dumbphone">https://www.last.fm/user/dumbphone</a><br>
-                <a href="https://soundcloud.com/goodwriting"> https://soundcloud.com/goodwriting</a><br>
-                <a href="https://rateyourmusic.com/~oldpeoplecrying">https://rateyourmusic.com/~oldpeoplecrying</a>
+                <a href="https://rateyourmusic.com/~oldpeoplecrying">https://rateyourmusic.com/~oldpeoplecrying</a><br>
                 <a href="https://twitter.com/oldpeoplecry">https://twitter.com/oldpeoplecry</a>
             </div>
         </div>
