--- a/index.html
+++ b/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="utf-8">
-    <title>~</title>
-    <meta name="author" content="~">
-    <meta name="description" content="">
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="feed like fishes" />
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>memdrive</title>
+        <meta name="author" content="memdrive">
+        <link rel="canonical" href="https://memdrive.github.io"/>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/custom.css">
-        
-</head>
-<body>
-    <div class="container">
-            <div class="three columns sidebar">
-                <nav>
-                    <h4 id="logo"><a href="/">twt</a></h4>
-                    <ul>
-                        <li><a href="/music">music</a></li>
-                    </ul>
-                </nav>
-                &nbsp;
-            </div>
-            <div class="twelve columns offset-by-one content">
-                <a class="twitter-timeline" 
-                href="https://twitter.com/oldpeoplecry"
-                data-chrome="nofooter noheader noborders noscrollbar transparent">Tweets by @oldpeoplecry</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <link rel="stylesheet" href="css/style.css"></link>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="action.js"></script>
+    </head>
+
+    <header>
+        <div class="headerwrapper">
+            Toad Party
         </div>
-    </div>
-</body>
+    </header>   
+    
+    <body>
+        <div class="body-container">
+            <div src="media/toad.png"></div>
+        </div>
+
+        <div class="buttons">
+            <div id="clear">clear</div>
+            <div id="party">party</div>
+        </div>
+
+    </body>
+</html>
