--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <div class="headerwrapper">
-            Toad Party
+            mario can jump
         </div>
     </header>   
     
@@ -26,7 +26,7 @@
 
         <div class="buttons">
             <div id="clear">clear</div>
-            <div id="party">party</div>
+            <div id="party">jump</div>
         </div>
 
     </body>
